--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -17,7 +17,6 @@
                                 type="hidden"
                                 id="id"
                                 name="id"
-                                value="{{ data['id'] }}"
                         >
                         <div class="form-group">
                             <label for="name">Name</label>
@@ -27,7 +26,6 @@
                                     class="form-control"
                                     id="name"
                                     name="name"
-                                    value="{{ data['name'] }}"
                             >
                         </div>
                         <div class="form-group">
@@ -49,7 +47,6 @@
                                     class="form-control"
                                     id="phone"
                                     name="phone"
-                                    value="{{ data['phone'] }}"
                             >
                         </div>
                         <div class="form-group">
@@ -58,7 +55,6 @@
                                     type="text"
                                     class="form-control"
                                     id="email"
-                                    value="{{ data['email'] }}"
                             >
                         </div>
                         <div class="form-group">
@@ -68,7 +64,7 @@
                                     id="address"
                                     name="address"
                                     rows="5"
-                            >{{ data['address'] }}</textarea>
+                            ></textarea>
                         </div>
                         <input
                                 type="reset"
@@ -78,7 +74,7 @@
                         <input
                                 type="submit"
                                 class="btn btn-outline-primary float-right"
-                                value="Update"
+                                value="Save"
                         >
                     </form>
                 </div>
