--- a/templates/user.html
+++ b/templates/user.html
@@ -4,10 +4,12 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-plus-circle"></i>
-                        Add
-                    </button>
+                    <a href="{{ url_for('add_user') }}">
+                        <button class="btn btn-primary">
+                            <i class="fas fa-plus-circle"></i>
+                            Add
+                        </button>
+                    </a>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
