--- a/templates/view_user.html
+++ b/templates/view_user.html
@@ -13,8 +13,11 @@
                 </div>
                 <div class="card-body">
                   <center>
-                      <h1>User Name: {{ name }}</h1>
-                      <h1>User Gender: {{ gender }}</h1>
+                      <h3>User Name: {{ data['name'] }}</h3>
+                      <h3>User Gender: {{ data['gender'] }}</h3>
+                      <h3>User Phone: {{ data['phone'] }}</h3>
+                      <h3>User Email: {{ data['email'] }}</h3>
+                      <h3>User Address: {{ data['address'] }}</h3>
                   </center>
                 </div>
             </div>
