--- a/templates/user.html
+++ b/templates/user.html
@@ -1,15 +1,124 @@
 {% extends 'master.html' %}
 {% block content %}
-    <div class="row">
+    <div id="app" class="row">
         <div class="col-12">
+            <!-- Modal -->
+            <div
+                    class="modal fade"
+                    id="user_modal"
+                    data-backdrop="static"
+                    data-keyboard="false"
+                    tabindex="-1"
+                    aria-labelledby="staticBackdropLabel"
+                    aria-hidden="true"
+            >
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form enctype="multipart/form-data">
+                                {# Name #}
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input
+                                            required
+                                            type="text"
+                                            class="form-control"
+                                            id="name"
+                                            name="name"
+                                            v-model="form.name"
+                                    >
+                                </div>
+                                {# Gender #}
+                                <div class="form-group">
+                                    <label for="gender">Gender</label>
+                                    <select
+                                            class="form-control"
+                                            id="gender"
+                                            name="gender"
+                                            v-model="form.gender"
+                                    >
+                                        <option selected value="male">Male</option>
+                                        <option value="female">Female</option>
+                                        <option value="none">None</option>
+                                    </select>
+                                </div>
+                                {# Phone #}
+                                <div class="form-group">
+                                    <label for="phone">Phone</label>
+                                    <input
+                                            type="text"
+                                            class="form-control"
+                                            id="phone"
+                                            name="phone"
+                                            v-model="form.phone"
+                                    >
+                                </div>
+                                {# E-mail #}
+                                <div class="form-group">
+                                    <label for="email">E-mail</label>
+                                    <input
+                                            type="text"
+                                            class="form-control"
+                                            id="email"
+                                            name="email"
+                                            v-model="form.email"
+                                    >
+                                </div>
+                                {# Address #}
+                                <div class="form-group">
+                                    <label for="address">Address</label>
+                                    <textarea
+                                            class="form-control"
+                                            id="address"
+                                            name="address"
+                                            rows="5"
+                                            v-model="form.address"
+                                    >[[ form.address ]]</textarea>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button
+                                    @click="closePopup()"
+                                    type="button"
+                                    class="btn btn-secondary"
+                            >Close
+                            </button>
+                            <button
+                                    v-if="status == 'add'"
+                                    @click="onSave()"
+                                    type="button"
+                                    class="btn btn-primary"
+                            >Save
+                            </button>
+
+                            <button
+                                    v-if="status == 'edit'"
+                                    @click="onEdit()"
+                                    type="button"
+                                    class="btn btn-warning"
+                            >Update
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="card">
                 <div class="card-header">
-                    <a href="{{ url_for('add_user') }}">
-                        <button class="btn btn-primary">
-                            <i class="fas fa-plus-circle"></i>
-                            Add
-                        </button>
-                    </a>
+                    <button
+                            @click="openPopup()"
+                            class="btn btn-primary"
+                    >
+                        <i class="fas fa-plus-circle"></i>
+                        Add
+                    </button>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -26,46 +135,37 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for item in data %}
-                                <tr>
-                                    <td>{{ loop.index }}</td>
-                                    <td>
+                            <tr
+                                    v-for="(item, index) in user_list"
+                                    :key="'user_'+index"
+                            >
+                                <td>[[ index+1 ]]</td>
+                                <td>
                                         <span style="text-transform: uppercase">
-                                            {{ item['name'] }}
+                                            [[ item.name ]]
                                         </span>
-                                    </td>
-                                    <td>{{ item['gender'] }}</td>
-                                    <td>{{ item['phone'] }}</td>
-                                    <td>{{ item['email'] }}</td>
-                                    <td>{{ item['address'] }}</td>
-                                    <td>
-                                        <a href="/view_user?name={{ item['name'] }}">
-                                            <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                            >
-                                                <i class="fas fa-eye"></i>
-                                                View
-                                            </button>
-                                        </a>
-                                        <a href="/edit_user/{{ item['id'] }}">
-                                            <button
-                                                    class="btn btn-sm btn-outline-secondary"
-                                            >
-                                                <i class="fas fa-edit"></i>
-                                                Edit
-                                            </button>
-                                        </a>
-                                        <a href="/confirm_delete_user?name={{ item['name'] }}">
-                                            <button
-                                                    class="btn btn-sm btn-outline-danger"
-                                            >
-                                                <i class="fas fa-trash"></i>
-                                                Delete
-                                            </button>
-                                        </a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
+                                </td>
+                                <td> [[ item.gender ]]</td>
+                                <td>[[ item.phone ]]</td>
+                                <td>[[ item.email ]]</td>
+                                <td>[[ item.address ]]</td>
+                                <td>
+                                    <button
+                                            @click="getEdit(item)"
+                                            class="btn btn-sm btn-outline-secondary mr-2"
+                                    >
+                                        <i class="fas fa-edit"></i>
+                                        Edit
+                                    </button>
+                                    <button
+                                            @click="deleteRecord(index)"
+                                            class="btn btn-sm btn-outline-danger"
+                                    >
+                                        <i class="fas fa-trash"></i>
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
@@ -73,4 +173,96 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block script %}
+    <script>
+        const {createApp} = Vue
+        createApp({
+            delimiters: ['[[', ']]'],
+            created() {
+                this.getUser()
+            },
+            data() {
+                return {
+                    user_list: [],
+                    form: {
+                        id: null,
+                        name: null,
+                        gender: 'female',
+                        phone: '855-',
+                        email: '@mail.com',
+                        address: null,
+                    },
+                    status: 'add'
+                }
+            },
+            methods: {
+                openPopup() {
+                    $('#user_modal').modal('show')
+                    {#$('#user_modal').modal('hide')#}
+                },
+                closePopup() {
+                    this.clearForm()
+                    $('#user_modal').modal('hide')
+                },
+                getUser() {
+                    let vm = this
+                    let api_url = "http://127.0.0.1:5000/getUser"
+                    axios.get(api_url)
+                    .then(function (response) {
+                        vm.user_list = response.data
+                    })
+                    .catch(function (error) {
+                        // handle error
+                        console.log(error);
+                    })
+                },
+                onSave() {
+                    let vm = this
+                    let api_url = "http://127.0.0.1:5000/createUser"
+                    let input = this.form
+                    axios.post(api_url, input)
+                    .then(function (response) {
+                        vm.getUser()
+                        vm.closePopup()
+                    })
+                    .catch(function (error) {
+                        // handle error
+                        console.log(error);
+                    })
+                },
+                getEdit(item) {
+                    this.status = 'edit'
+                    this.form.name = item.name
+                    this.form.gender = item.gender
+                    this.form.phone = item.phone
+                    this.form.email = item.email
+                    this.form.address = item.address
+                    $('#user_modal').modal('show')
+                },
+                deleteRecord(id) {
+                    Swal.fire({
+                        title: "Do you want to delete ?",
+                        showDenyButton: false,
+                        showCancelButton: true,
+                        confirmButtonText: "Save",
+                        denyButtonText: `Don't save`
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            this.user_list.splice(id, 1);
+                        }
+                    });
+                },
+                clearForm() {
+                    this.status = 'add'
+                    this.form.name = null
+                    this.form.gender = 'female'
+                    this.form.phone = '855-'
+                    this.form.email = '@mail.com'
+                    this.form.address = null
+                },
+            }
+        }).mount('#app')
+    </script>
 {% endblock %}
