--- a/templates/header_style.html
+++ b/templates/header_style.html
@@ -5,3 +5,4 @@
 <link rel="stylesheet" href="/static/plugins/fontawesome-free/css/all.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="/static/dist/css/adminlte.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.dataTables.min.css">
