--- a/templates/user.html
+++ b/templates/user.html
@@ -15,7 +15,9 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                            <h5 class="modal-title" id="staticBackdropLabel">
+                                [[ status == 'add' ? 'Add New User' : 'Update User' ]]
+                            </h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -113,6 +115,14 @@
             <div class="card">
                 <div class="card-header">
                     <button
+                            @click="getUser()"
+                            class="btn btn-secondary mr-2"
+                    >
+                        <i class="fas fa-circle"></i>
+                        Refresh
+                    </button>
+
+                    <button
                             @click="openPopup()"
                             class="btn btn-primary"
                     >
@@ -122,7 +132,7 @@
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-borderless table-striped">
+                        <table id="datatable" class="table table-borderless table-striped">
                             <thead>
                             <tr class="bg-primary">
                                 <th>No.</th>
@@ -158,7 +168,7 @@
                                         Edit
                                     </button>
                                     <button
-                                            @click="deleteRecord(index)"
+                                            @click="deleteRecord(item.id)"
                                             class="btn btn-sm btn-outline-danger"
                                     >
                                         <i class="fas fa-trash"></i>
@@ -194,7 +204,8 @@
                         email: '@mail.com',
                         address: null,
                     },
-                    status: 'add'
+                    status: 'add',
+                    api_url: 'http://' + window.location.hostname + ':' + window.location.port
                 }
             },
             methods: {
@@ -208,29 +219,33 @@
                 },
                 getUser() {
                     let vm = this
-                    let api_url = "http://127.0.0.1:5000/getUser"
+                    let api_url = vm.api_url + '/getUser'
+                    $.LoadingOverlay("show");
                     axios.get(api_url)
-                    .then(function (response) {
-                        vm.user_list = response.data
-                    })
-                    .catch(function (error) {
-                        // handle error
-                        console.log(error);
-                    })
+                        .then(function (response) {
+                            vm.user_list = response.data
+                            $.LoadingOverlay("hide");
+                        })
+                        .catch(function (error) {
+                            // handle error
+                            console.log(error);
+                        })
                 },
                 onSave() {
                     let vm = this
-                    let api_url = "http://127.0.0.1:5000/createUser"
+                    let api_url = vm.api_url + '/createUser'
                     let input = this.form
+                    $.LoadingOverlay("show");
                     axios.post(api_url, input)
-                    .then(function (response) {
-                        vm.getUser()
-                        vm.closePopup()
-                    })
-                    .catch(function (error) {
-                        // handle error
-                        console.log(error);
-                    })
+                        .then(function (response) {
+                            vm.getUser()
+                            vm.closePopup()
+                            $.LoadingOverlay("hide");
+                        })
+                        .catch(function (error) {
+                            // handle error
+                            console.log(error);
+                        })
                 },
                 getEdit(item) {
                     this.status = 'edit'
@@ -250,7 +265,19 @@
                         denyButtonText: `Don't save`
                     }).then((result) => {
                         if (result.isConfirmed) {
-                            this.user_list.splice(id, 1);
+                            //this.user_list.splice(id, 1);
+                            let vm = this
+                            let api_url = vm.api_url + '/deleteUser'
+                            $.LoadingOverlay("show");
+                            axios.post(api_url, {id:id})
+                                .then(function (response) {
+                                    vm.getUser()
+                                    $.LoadingOverlay("hide");
+                                })
+                                .catch(function (error) {
+                                    // handle error
+                                    console.log(error);
+                                })
                         }
                     });
                 },
