--- a/templates/master.html
+++ b/templates/master.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Starter</title>
+    <title>SS25 | Admin Panel</title>
     {% include 'header_style.html' %}
 </head>
 <body class="hold-transition sidebar-mini">
@@ -82,10 +82,10 @@
     <!-- Main Sidebar Container -->
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a href="index3.html" class="brand-link">
+        <a href="/admin" class="brand-link">
             <img src="/static/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                  style="opacity: .8">
-            <span class="brand-text font-weight-light">AdminLTE 3</span>
+            <span class="brand-text font-weight-light">SS25 | Admin Panel</span>
         </a>
 
         <!-- Sidebar -->
@@ -96,7 +96,7 @@
                     <img src="/static/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                 </div>
                 <div class="info">
-                    <a href="#" class="d-block">Alexander Pierce</a>
+                    <a href="#" class="d-block">Alien boy</a>
                 </div>
             </div>
 
@@ -115,6 +115,12 @@
                         <a href="{{ url_for('user') }}" class="nav-link {{ 'active' if module == 'user' else '' }}">
                             <i class="nav-icon fas fa-users"></i>
                             <p>Users</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{{ url_for('category') }}" class="nav-link {{ 'active' if module == 'category' else '' }}">
+                            <i class="nav-icon fas fa-cubes"></i>
+                            <p>Categories</p>
                         </a>
                     </li>
                     <li class="nav-item menu-open1">
@@ -176,7 +182,8 @@
             Anything you want
         </div>
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">SS25 Admin Panel</a>.</strong> All rights
+        reserved.
     </footer>
 </div>
 
